# bsap1.0

./: LICENSE
.github/workflows/: ci-cd.yml
bsap/: README.md
bsap/docs/: ARCHITECTURE.md
bsap/dotnet/BSAP.Orchestration/: appsettings.json
bsap/dotnet/BSAP.Orchestration/Controllers/: ScanController.cs
bsap/infra/docker/: Dockerfile.rust
bsap/nodejs/dashboard/: package.json  server.ts
bsap/nodejs/dashboard/app/: page.tsx
bsap/proto/: bsap.proto
bsap/rust/: Cargo.toml
bsap/rust/scanner-api/src/: lib.rs
bsap/rust/scanner-container/: Cargo.toml
bsap/rust/scanner-core/: Cargo.toml
bsap/rust/scanner-dependency/: Cargo.toml
bsap/rust/scanner-dependency/src/: lib.rs
bsap/rust/scanner-grpc/: Cargo.toml
bsap/rust/scanner-grpc/src/: lib.rs
bsap/rust/scanner-memory/src/: lib.rs
bsap/rust/scanner-runtime/: Cargo.toml
bsap/rust/src/: main.rs
docs/: API_SPEC.yaml  DEPLOYMENT.md  PRODUCTION_FEATURES.md  THREAT_MODEL.md
dotnet/: BSAP.sln
dotnet/BSAP.Common/Models/: Finding.cs
dotnet/BSAP.Orchestration/: BSAP.Orchestration.csproj  BSAPDbContext.cs  Program.cs
dotnet/BSAP.Orchestration/RiskEngine/: RiskAssessment.cs  RiskEngine.cs
dotnet/BSAP.Orchestration/Services/: GrpcScannerClient.cs
infra/docker/: docker-compose.prod.yml
infra/k8s/: deployment.yaml
proto/: README.md
rust/: build.rs
rust/scanner-api/: Cargo.toml
rust/scanner-api/src/: prototype_pollution.rs
rust/scanner-container/src/: lib.rs
rust/scanner-core/src/: lib.rs
rust/scanner-grpc/src/: main.rs
rust/scanner-malware/: Cargo.toml
rust/scanner-malware/src/: lib.rs
rust/scanner-memory/: Cargo.toml
rust/scanner-runtime/src/: lib.rs
schemas/: postgres_schema.sql
(+2 files in other folders)
