[workspace]
resolver = "2"
members = [
    "scanner-core",
    "scanner-memory",
    "scanner-malware",
    "scanner-api",
    "scanner-container",
    "scanner-dependency",
    "scanner-runtime",
    "scanner-grpc"  # New gRPC service layer
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["BSAP Team"]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tonic = "0.12"
prost = "0.13"
tonic-health = "0.12"
