[package]
name = "scanner-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
scanner-core = { path = "../scanner-core" }
scanner-memory = { path = "../scanner-memory" }
scanner-malware = { path = "../scanner-malware" }
scanner-api = { path = "../scanner-api" }
scanner-container = { path = "../scanner-container" }
scanner-dependency = { path = "../scanner-dependency" }
scanner-runtime = { path = "../scanner-runtime" }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
anyhow = { workspace = true }
tonic-health = { workspace = true }
